--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -23,5 +23,6 @@
     "@types/jest": "^26.0.22",
     "@types/react": "^17.0.3",
     "jest": "^26.6.3"
-  }
+  },
+  "gitHead": "f22644971af00efbf84b1471652f72e4728af27a"
 }
